# WHMS-fyp

./: .gitignore  README.md  STRIPE_SETUP_GUIDE.md  package-lock.json
Backend/: .dockerignore  .env.docker  docker-compose.yml  package-lock.json  package.json
Backend/prisma/: schema.prisma  seed.js
Misc/: setup-server.sh.txt
backend/: ADMIN_SETTINGS_HESTIACP.md  CYBERPANEL_MIGRATION.md  E2E_TEST_HESTIA.sh  HESTIACP_COMPLETE_SUMMARY.md  NEXT_STEPS.md  TESTING_QUICK_REFERENCE.md  WHMS_Client_Module.postman_collection.json  docker-compose.yml  history.txt  jest.config.js  lifecycletester.js  openapi.js  openapi.json  package-lock.json  package.json  run_test.sh  run_tests_wrapper.js  test-auth-flow.js  test-db.js  test-stripe.js
backend/plugins/actions/hash_wasm_plugin/: Cargo.toml  manifest.json
backend/plugins/actions/hash_wasm_plugin/src/: main.rs
backend_tmp/: Dockerfile  docker-compose.yml  package-lock.json
frontend/: README.md  next.config.mjs  package-lock.json  package.json  package.json.save  revert-vscode-terminal-sync.sh  tsconfig.json
misc/: .dockerignore  Dockerfile  docker-compose.override.yml  setup-server.sh.txt
whms-docs/: Chapter7_Conclusion.md  DIAGNOSE_LOGIN.md  E2E_TEST_CYBERPANEL.sh  FINAL_TEST_SUMMARY.md  FRS_Chapter3.md  FYP_Report_Ch5_Ch6_Ch7.md  HESTIACP_IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTING_RESULTS.md  NFR_Chapter3.md  STRIPE_TEST_REPORT.md  Testing_Chapters_3_5_6.md  Testing_Chapters_3_5_6_WITH_REAL_OUTPUT.md  UseCases_Chapter3.md  filetree.txt
whms-landing/: index.html  package-lock.json  package.json
(+1646 files in other folders)
